istio/peer-authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: yas-staging        # "default" = namespace-wide, apply cho TẤT CẢ services
spec:
  mtls:
    mode: STRICT            # Từ chối mọi plain-text. Chỉ accept mTLS.
