istio/virtual-service-retry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: order-retry
  namespace: yas-dev
spec:
  hosts:
  - order
  http:
  - route:
    - destination:
        host: order
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: "5xx,connect-failure,refused-stream,retriable-4xx"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cart-retry
  namespace: yas-dev
spec:
  hosts:
  - cart
  http:
  - route:
    - destination:
        host: cart
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: "5xx,connect-failure,refused-stream,retriable-4xx"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: product-retry
  namespace: yas-dev
spec:
  hosts:
  - product
  http:
  - route:
    - destination:
        host: product
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: "5xx,connect-failure,refused-stream,retriable-4xx"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: inventory-retry
  namespace: yas-dev
spec:
  hosts:
  - inventory
  http:
  - route:
    - destination:
        host: inventory
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: "5xx,connect-failure,refused-stream,retriable-4xx"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customer-retry
  namespace: yas-dev
spec:
  hosts:
  - customer
  http:
  - route:
    - destination:
        host: customer
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: "5xx,connect-failure,refused-stream,retriable-4xx"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tax-retry
  namespace: yas-dev
spec:
  hosts:
  - tax
  http:
  - route:
    - destination:
        host: tax
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: "5xx,connect-failure,refused-stream,retriable-4xx"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: media-retry
  namespace: yas-dev
spec:
  hosts:
  - media
  http:
  - route:
    - destination:
        host: media
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: "5xx,connect-failure,refused-stream,retriable-4xx"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: search-retry
  namespace: yas-dev
spec:
  hosts:
  - search
  http:
  - route:
    - destination:
        host: search
    retries:
      attempts: 3
      perTryTimeout: 2s
      retryOn: "5xx,connect-failure,refused-stream,retriable-4xx"
